--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.2",
+    "js-cookie": "^3.0.1",
     "lightweight-charts": "^3.8.0",
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
