--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lightweight-charts": "^3.8.0",
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue-tradingview-widgets": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
