--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.2",
-    "js-cookie": "^3.0.1",
     "klinecharts": "^8.6.2",
     "lightweight-charts": "^3.8.0",
     "vue": "^3.2.13",
     "vue-axios": "^3.4.1",
     "vue-class-component": "^8.0.0-0",
+    "vue-cookies": "^1.8.2",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
