--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vueuse/head": "^0.7.7",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "el-table-infinite-scroll": "^3.0.1",
     "element-plus": "^2.2.2",
     "klinecharts": "^8.6.2",
     "lightweight-charts": "^3.8.0",
